# polykami

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/basic_example/: CMakeLists.txt  README.md  main.cpp
examples/demo_context/: CMakeLists.txt  main.cpp
include/polykami/: polykami.h
include/polykami/core/: Polykernel.h  camera.h  polykernel.h
include/polykami/core/window/: Window.h
include/polykami/rendering/: shader.h  texture.h
include/polykami/window/: Window.h  window.h
src/: CMakeLists.txt
src/core/: Polykernel.cpp  Polykernel_Impl.cpp  Polykernel_Impl.h  camera.cpp  camera_impl.cpp  camera_impl.h  polykernel.cpp
src/core/window/: Window.cpp  Window_Impl.cpp  Window_Impl.h
src/rendering/: shader.cpp  texture.cpp
src/window/: Window.cpp  Window_Impl.cpp  Window_Impl.h  window.cpp  window_impl.cpp  window_impl.h
